--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
